2012-03-20 Tsi YANG <tsi@in-cite.net>
	* Feature: Added stats download.
	* Refactor: Reworked file link generation. Must call makelink class for all file links.
	* Fix: Passed data through htmlspecialchars.
	* Fix: Mistakes in extern url generation.

2012-03-19 Tsi YANG <tsi@in-cite.net>
	* Feature: Retrieved first category's picto on list view. Displaying on last release template.

2012-03-16 Tsi YANG <tsi@in-cite.net>
	* Fix: Forgotten conf in setup.txt
	* Fix: Mistakes in sorting.
	* Feature: Added template list for last update and last release views.

2012-03-15 Tsi YANG <tsi@in-cite.net>
	* Feature: Added sorting configuration on crdate.
	* Feature: Added select configuration. Possibility to filter on agencies.

2012-03-09 Tsi YANG <tsi@in-cite.net>
	* Feature: Added sorting configuration. Keeping default on last timestamp and title. Keeping configuration on day and title. The new configuration is on last timestamp only.

2012-03-08 Tsi YANG <tsi@in-cite.net>
	* Feature: Added statistics table sql index on date and dataset
	* Feature: Added plugin pi3
	* Feature: Implemented stats by datasets
	* Feature: Partial implementation of stats by files
	* Feature: Added pi3 flexform
	* Fix: Bad implementation of stats by files

2011-05-12 Tsi YANG <tsi@in-cite.net>
	* Feature: Added sql table for files downloads statistics

2011-05-12 In Cite Solution  <technique@in-cite.net>

	* initial code generated with kickstarter