@@ -3,6 +3,7 @@
 	* Refactor: Reworked file link generation. Must call makelink class for all file links.
 	* Fix: Passed data through htmlspecialchars.
 	* Fix: Mistakes in extern url generation.
+	* Feature: Added scheduler task to process download logs.
 
 2012-03-19 Tsi YANG <tsi@in-cite.net>
 	* Feature: Retrieved first category's picto on list view. Displaying on last release template.
